Единый дизайн сайта (сделал верстку всех шаблонов)

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
         {% load staticfiles %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
         <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.min.css' %}" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/my.css' %}" type="text/css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
