--- a/templates/disciplines_form.html
+++ b/templates/disciplines_form.html
@@ -5,17 +5,18 @@
     <div class="container">
         <form action="{% url 'disciplines:disciplines_add' %}" method="post">
             {% csrf_token %}
+            <h1>Добавление дисциплины</h1>
+            <br>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
-                    <h1>Добавление дисциплины </h1>
                     {% for field in form.visible_fields %}
                         <div class="form-group">
                             {{ field.label_tag }}
                             {% render_field field class="form-control" %}
                         </div>
                     {% endfor %}
-                    <center><p><button type="submit" class="btn btn-success">Сохранить</button>
-                    <input type="button" class="btn btn-primary" onclick="history.back();" value="Назад"/></p></center>
+                    <p align="center"><button type="submit" class="btn btn-success">Сохранить</button>
+                    <a href= "{% url 'disciplines:disciplines_list' %}" class="btn btn-primary">Отмена</a></p>
                 </div>
             </div>
         </form>
