--- a/templates/login.html
+++ b/templates/login.html
@@ -7,15 +7,20 @@
             <div class="row justify-content-md-center">
                 <div class="col-md-4">
                     <h1>Вход в систему</h1>
+                    <br>
+                    <div class="form-group">
                     <label for="username">Имя пользователя</label>
-                    <p><input required type="text" class="form-control" name="username" id="username" placeholder="Введите имя пользователя"></p>
+                    <input required type="text" class="form-control" name="username" id="username" placeholder="Введите имя пользователя">
+                    </div>
+                    <div class="form-group">
                     <label for="password">Пароль</label>
-                    <p><input required type="password" class="form-control" name="password" id="password" placeholder="Введите пароль"></p>
+                    <input required type="password" class="form-control" name="password" id="password" placeholder="Введите пароль">
+                    </div>
                     {% if login_error %}
-                        <p><label class="error">{{ login_error }}</label></p>
+                        <p align="left"><label class="error">{{ login_error }}</label></p>
                     {% endif %}
-                    <button type="submit" class="btn btn-success">Войти</button>
-                    <a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a>
+                    <p align="left"><button type="submit" class="btn btn-success">Войти</button>
+                    <a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a></p>
                 </div>
             </div>
         </form>
