--- a/templates/nomenclature.html
+++ b/templates/nomenclature.html
@@ -2,13 +2,10 @@
 {% block title %}Рабочий учебный план{% endblock %}
 {% block content %}
     <h1>Рабочий учебный план </h1>
+    {% csrf_token %}
+    <table>
 
-        {% csrf_token %}
-        <table>
-
-        </table>
-        <p></p>
-
-        <a href="{% url 'nomenclatures:upload_file' %}" class="btn btn-success"> Загрузить РУП </a>
-    </form>
+    </table>
+    <br>
+    <p align="center"><a href="{% url 'nomenclatures:upload_file' %}" class="btn btn-success"> Загрузить РУП </a></p>
 {% endblock %}
