--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,7 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     <h1>Регистрация</h1>
+                    <br>
                     {{ form.non_field_errors }}
                     {% for hidden_field in form.hidden_fields %}
                         {{ hidden_field }}
@@ -45,8 +46,8 @@
                                 {% endif %}
                             </div>
                     {% endfor %}
-                    <center><p><button type="submit" class="btn btn-primary">Зарегистрироваться</button>
-                    <a href="{% url 'login' %}" class="btn btn-success">Вернуться обратно</a></p></center>
+                    <p align="center"><button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+                    <a href="{% url 'login' %}" class="btn btn-success">Вернуться обратно</a></p>
                 </div>
             </div>
         </form>
