--- a/templates/student_form.html
+++ b/templates/student_form.html
@@ -1,22 +1,32 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
-    <h1>{{ title }}</h1>
-    <form method="post">
-        {% csrf_token %}
-        <table>
-        <tr>
-            <td align="left"><b>ФИО студента:</b></td>
-            <td><input id="id_fio" type="text" name="fio" maxlength="255" value="{{ student_list.student.FIO }}"></td>
-        </tr>
-        <tr>
-            <td align="left"><b>Номер зачетной книжки:</b></td>
-            <td><input id="id_studid" type="text" name="studid" maxlength="255" value="{{ student_list.student.StudentID }}"></td>
-        </tr>
-        {{ form.as_table }}
-        </table>
-        <p></p>
-        <button type="submit" class="btn btn-success">Сохранить</button>
-        <a href= "{% url 'student_changelist' %}" class="btn btn-primary">Вернуться</a>
-    </form>
+    <div class="container">
+        <form method="post">
+            {% csrf_token %}
+            <h1>{{ title }}</h1>
+            <br>
+            <div class="row">
+                <div class="col-md-4 offset-md-4">
+                    <div class="form-group">
+                    <label for="id_fio">ФИО студента:</td></label>
+                     <input class="form-control" id="id_fio" type="text" name="fio" maxlength="255" value="{{ student_list.student.FIO }}">
+                    </div>
+                    <div class="form-group">
+                    <label for="id_studid">Номер зачетной книжки:</label>
+                    <input class="form-control" id="id_studid" type="text" name="studid" maxlength="255" value="{{ student_list.student.StudentID }}">
+                    </div>
+                    {% for field in form.visible_fields %}
+                        <div class="form-group">
+                            {{ field.label_tag }}
+                            {% render_field field class="form-control" %}
+                        </div>
+                    {% endfor %}
+                    <p align="center"><button type="submit" class="btn btn-success">Сохранить</button>
+                    <a href= "{% url 'student_changelist' %}" class="btn btn-primary">Отмена</a></p>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
