--- a/templates/teacher_edit.html
+++ b/templates/teacher_edit.html
@@ -1,13 +1,24 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 {% block title %}Редактирование сотрудника{% endblock %}
 {% block content %}
-    <h1>Редактирование сотрудника </h1>
-    <form action=""  method="post">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-        </table>
-        <p></p>
-        <button type="submit" class=" save btn btn-success">Сохранить</button>
-    </form>
+    <div class="container">
+        <form action="" method="post">
+            {% csrf_token %}
+            <h1>Редактирование сотрудника</h1>
+            <br>
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    {% for field in form.visible_fields %}
+                        <div class="form-group">
+                            {{ field.label_tag }}
+                            {% render_field field class="form-control" %}
+                        </div>
+                    {% endfor %}
+                    <p align="center"><button type="submit" class="btn btn-success">Сохранить</button>
+                    <a href= "{% url 'teachers:list_teachers' %}" class="btn btn-primary">Отмена</a></p>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
