--- a/templates/base.html
+++ b/templates/base.html
@@ -72,4 +72,5 @@
     <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
     <script src="{% static 'js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'js/tables.js' %}"></script>
+    {% block scripts %}{% endblock %}
 </html>
