--- a/templates/export_to_excel.html
+++ b/templates/export_to_excel.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Экран успеваемости{% endblock %}
 {% block content %}
-<form action="{% url 'disciplines:excel' %}" method="get">
+<form action="{% url 'disciplines:export' %}" method="get">
     <h1 class="title">Экран успеваемости</h1>
     <div class="row">
         <div class="col-md-4 offset-md-4">
@@ -27,11 +27,10 @@
     </div>
 </form>
             <br>
-            {{ group }}
             <table id="table1" class="table table-bordered">
                 <thead class="thead-light">
                     <tr>
-                        <th>{{ group }} семестр {{ semestrname }}</th>
+                        <th>ФИО</th>
                         {% for subject in subjects %}
                         <th>{{ subject.Name }}</th>
                         {% endfor %}
