--- a/templates/nomenclature.html
+++ b/templates/nomenclature.html
@@ -4,11 +4,7 @@
     <h1>Рабочий учебный план </h1>
     <form action="" method="get">
         {% csrf_token %}
-        <p></p>
-        <a href="{% url 'nomenclatures:upload_file' %}" class="btn btn-success"> Загрузить РУП </a>
-        <p></p>
-        
-
-
+        <br>
+        <p align="center"><a href="{% url 'nomenclatures:upload_file' %}" class="btn btn-success"> Загрузить РУП </a></p>
     </form>
 {% endblock %}
