выбор дисциплины по семестрам, направлениям подготовки и профиля. не докончила

--- a/templates/select_semestr.html
+++ b/templates/select_semestr.html
@@ -1,18 +1,38 @@
 {% extends 'base.html' %}
 {% block title %}Рабочий учебный план{% endblock %}
 {% block content %}
-    <h1>Рабочий учебный план </h1>
-    <form action="{% url 'nomenclatures:setteachers' %}" method="get">
-        <p></p>
-        <div>
-            <label>Семестр:</label>
-            <select name="dropdown1" class="form-control">
-            {% for semestr in semestrs %}
-                <option value="{{ semestr.id }}">{{ semestr.name}}</option>
-            {% endfor %}
+
+<form action="{% url 'nomenclatures:setteachers' %}" method="get">
+    <h1 class="title">Создания номенклатуры предметов</h1>
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <br>
+            <div class="form-group">
+            <label for="dropdown1" >Семестр:</label>
+            <select name="dropdown1" id="dropdown1" class="form-control">
+                {% for semestr in semestrs %}
+                    <option value="{{ semestr.id }}">{{ semestr.name}}</option>
+                {% endfor %}
             </select>
-        </div>
-        <p></p>
-        <button type="submit" class="btn btn-success" value="submit">Выбрать преподавателя</button>
-    </form>
+            </div>
+            <div class="form-group">
+            <label for="dropdown3">Направления подготовки:</label>
+            <select name="dropdown3" id="dropdown3" class="form-control">
+                {% for specialization in specializations %}
+                    <option value="{{ specialization.id }}">{{ specialization.name}}</option>
+                {% endfor %}
+            </select>
+            </div>
+            <div class="form-group">
+            <label for="dropdown4">Профиль:</label>
+            <select name="dropdown4" id="dropdown4" class="form-control">
+                {% for profile in profiles %}
+                    <option value="{{ profile.id }}">{{ profile.name}}</option>
+                {% endfor %}
+            </select>
+            </div>
+            <p align="center"><button type="submit" class="btn btn-success" value="submit">Выбрать преподавателя</button>
+          </div>
+    </div>
+</form>
 {% endblock %}
